[Mac][Material Design] Fix toolbar height regression.

Fix a toolbar height regression on non-Retina Mac introduced in
https://codereview.chromium.org/1948963002 .

R=avi@chromium.org
BUG=611746

Review-Url: https://codereview.chromium.org/1986083003
Cr-Commit-Position: refs/heads/master@{#394430}

Former-commit-id: a128b79566a12f910fda7acfb9ee671c8dbd2705